# gxcore

./: Cargo.toml  README.md  ROADMAP.md  WHITEPAPER.md
benches/: encoding_benchmark.rs
frontend/: docs.html  index.html
frontend/frontendBuild/: docs.html  index.html  package-lock.json  package.json  whitepaper.md
frontend/frontendBuild/src/: App.tsx  index.css
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encode_decode.rs
src/: api.rs  lib.rs  main.rs
