[package]
name = "cyphersolbase"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
crc32fast = "1.3"
huffman-compress = "0.1"
solana-program = "1.18"
halo2_proofs = "0.3"
base64 = "0.21"
lz4 = "1.24"
brotli = "3.3"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encoding_benchmark"
harness = false
